[package]
name = "amethyst_terrain"
version = "0.1.0"
authors = ["Rudi Floren <rudi.floren@gmail.com>"]
edition = "2018"
description = """Terrain rendering using a Cardinal Neighbour Quadtree LOD approach partly based on:
* https://bitbucket.org/victorbush/ufl.cap5705.terrain/src/93c5ab3824a5a66d87d1bb6dcc9ed9aee7a16357/src_non_uniform/?at=master 
* https://developer.nvidia.com/gpugems/GPUGems2/gpugems2_chapter07.html 
* and the FarCry5 GDC Slides

Should support asset streaming in the future.

This approach uses tesselation and thus requires OpenGL 4.1. 
In the future tesselation fallbacks may be possible (like UE4 does with Landscape).

Current goal is to get good terrain rendering using heightmaps of up to 2048x2048px.
"""

[dependencies]
amethyst = { git = "https://github.com/valkum/amethyst", rev = "5bdbff10a31d8f0b7a480eea1210497666131a4d" }
amethyst_derive = { git = "https://github.com/valkum/amethyst", rev = "5bdbff10a31d8f0b7a480eea1210497666131a4d" }
amethyst_rendy = { git = "https://github.com/valkum/amethyst", rev = "5bdbff10a31d8f0b7a480eea1210497666131a4d" }
cnquadtree = { path = "../cnquadtree" }
lazy_static = "1.0"
failure = "0.1"
log = "*"
glsl-layout = "0.3"
nalgebra = "0.17"
ncollide2d = "0.18"
serde = { version = "1.0", features = ["derive"] }
image = "*"
shred = {version = "0.7"}
shred-derive = {version  = "0.5" }
smallvec = "0.6.9"

[dev-dependencies]
pretty_assertions = "0.6.1"

[features]
vulkan = ["amethyst_rendy/vulkan"]
metal = ["amethyst_rendy/metal"]